# LTBL

./: .gitignore  LTBL.cabal  Main.hs  README.md  flake.nix  scene.ppm
Lib/Vector/: vec3.hs
Utils/Functions/: DRand.hs
Utils/Geo/: Common.hs  Hittable.hs  Ray.hs  Sphere.hs
Utils/Scene/: Camera.hs
Utils/Vector/: vec3.hs
app/: Main.hs
scene/: frame1.ltbl  world.ltbl
src/: LTBL.hs
src/Cbits/Interface/: DRand.hs
src/Rel/MaterialRel/: Base.hs  Dielectric.hs  Lambertian.hs  Metal.hs  Scatter.hs
src/Rel/MeshRel/Box/: Hit.hs
src/Rel/MeshRel/IHit/: Base.hs  Hittable.hs
src/Rel/MeshRel/Sphere/: Hit.hs
src/SceneDescriptor/: Parser.hs
src/SceneDescriptor/Attribute/: Base.hs
src/SceneDescriptor/Attribute/Camera/: Base.hs
src/SceneDescriptor/Attribute/Material/: Base.hs  Dielectric.hs  Lambertian.hs  Metal.hs
src/SceneDescriptor/Attribute/Mesh/: Base.hs
src/SceneDescriptor/Attribute/Mesh/Primitive/: Box.hs  Sphere.hs
src/Struct/: Ray.hs
src/Struct/Vector/: Vec3.hs
src/Utils/: Ray.hs
src/Utils/Functions/: DRand.hs
src/Utils/Geo/: Box.hs  Common.hs  Hittable.hs  Ray.hs  Sphere.hs
src/Utils/Scene/: Camera.hs
src/Utils/Vector/: Vec3.hs
