cabal-version:      3.0
name:               LTBL
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             RahulNavneeth
maintainer:         rahulmnavneeth@gmail.com
-- copyright:
category:           Graphics
build-type:         Simple
-- extra-source-files:

common warnings
  ghc-options:
    -Wall
    -Wname-shadowing
    -Wno-missing-home-modules

package *
  ghc-options: -O0

library
  import: warnings
  exposed-modules: LTBL
  other-modules:
    -- Rel
    -- # MeshRel :: Hit
    Rel.MeshRel.IHit.Base
    Rel.MeshRel.IHit.Hittable
    Rel.MeshRel.Box.Hit
    Rel.MeshRel.Sphere.Hit
    -- # MaterialRel
    Rel.MaterialRel.Base
    Rel.MaterialRel.Lambertian
    Rel.MaterialRel.Scatter
    
    -- Struct
    -- # Vector
    Struct.Vector.Vec3
    Struct.Ray
    
    -- Scene descriptor
    -- # Parser
    SceneDescriptor.Parser
    -- # Camera
    SceneDescriptor.Attribute.Camera.Base
    -- # Attributes
    SceneDescriptor.Attribute.Base
    SceneDescriptor.Attribute.Mesh.Base
    SceneDescriptor.Attribute.Material.Base
    SceneDescriptor.Attribute.Material.Lambertian
    SceneDescriptor.Attribute.Mesh.Primitive.Sphere
    
    -- Cbits
    Cbits.Interface.DRand

  hs-source-dirs: src
  build-depends: base >=4.17.2.1 && <4.21,
                 vector,
                 filepath,
                 random,
  default-extensions: InstanceSigs
  default-language: Haskell2010

executable LTBL
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends: base >=4.17.2.1 && <4.21,
                      vector,
                      LTBL
    hs-source-dirs:   app
    default-language: Haskell2010
